# ESPECG

./: .gitignore  ECG_AD8232.md  LICENSE  README.md
data_analysis/: REAMDE.md  beat_cut.py  convert.py  model.h5  plot.py  pyproject.toml  pyproject.toml.bak  rhythm_cut.py  tf_dataprep.py  train.py
esp32/: ecgmodel.h  esp32.ino  ml_model.h
