[tool.poetry]
name = "especg_data_analysis"
version = "0.1.0"
description = ""
authors = ["HAL9000COM <f1226942353@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.9"
mypy = "<1.5.0"
wfdb = "^4.1.2"
notebook = "<7.0.2"
tensorflow = "2.1.1"
black = "^23.1.0"
seaborn = "^0.12.2"
scikit-learn = "<1.3.0"
ray = "^2.6.2"
tinymlgen = "^0.2"
protobuf="3.20.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
