[tool.poetry]
name = "especg-data-analysis"
version = "0.1.0"
description = ""
authors = ["HAL9000COM <f1226942353@icloud.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
wfdb = "^4.1.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
everywhereml = "^0.2.39"
tensorflow = "2.15.1"
tensorflow-io-gcs-filesystem = "0.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
notebook = "^7.2.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
